--- a/src/index.css
+++ b/src/index.css
@@ -194,6 +194,19 @@
   }
 }
 
+@keyframes marquee {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-marquee {
+  animation: marquee 30s linear infinite;
+}
+
 /* Hide scrollbar completely */
 ::-webkit-scrollbar {
   display: none;
